# cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  build.sh  conanfile.txt  install.sh  run-tests.sh
.github/workflows/: build.yml
compressor/: CMakeLists.txt
compressor/src/: compressor.cpp
libcompressor/: CMakeLists.txt
libcompressor/include/libcompressor/: libcompressor.hpp
libcompressor/src/: libcompressor.cpp
libcompressor/tests/: libcompressortest.cpp
task_1/: .gitignore  CMakeLists.txt
task_1/compressor/: CMakeLists.txt
task_1/libcompressor/: CMakeLists.txt
task_1/libcompressor/include/libcompressor/: libcompressor.hpp
task_1/libcompressor/src/: libcompressor.cpp
task_1/libcompressor/tests/: CMakeLists.txt  libcompressortest.cpp
